--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>React</title>
+    <title>Covid-19 Stats</title>
   </head>
   <body>
       <div id="app"></div>
